Guides layout fixes (#51385)
* Moving $gray-900 slightly darker to increase contrast ratios in body

* Hn to white in dark mode

* “Guides” logo word mark to white

* Fixing yellow block overlap in subCol

* Setting sidebar for intermediate desktop range

* Fixing missing bottom border on interstitials due to dd collision

* Simplifying layout, adding break points

* pointer cursor on code copy

* Fixing border regression on code interstitial

--- a/guides/assets/stylesrc/_dark.scss
+++ b/guides/assets/stylesrc/_dark.scss
@@ -63,11 +63,11 @@
       }
     } // table
 
-    h3 {
+    h3, h4, h5, h6 {
       a,
       a:link,
       a:visited {
-        color: $gray-100;
+        color: #fff;
       } // a, a:link, a:visited
     } // h3
 
@@ -110,6 +110,9 @@
     header#page_header {
       nav#feature_nav {
         .header-logo {
+          a, a:link, a:visited {
+            color: #fff;
+          }
           span#version_switcher {
             color: $gray-400;
 
